adding class BEM convention

--- a/index.html
+++ b/index.html
@@ -7,59 +7,96 @@
     <title>Huddle</title>
   </head>
   <body>
-    <header>
-      <img src="./medias/img/logo.svg" alt="logo" />
-      <a href="#">Try it Free</a>
+    <header class="header">
+      <img class="header__logo" src="./medias/img/logo.svg" alt="logo" />
+      <a class="header__bouton" href="#">Try it Free</a>
     </header>
-    <main>
-      <div>
-        <h1></h1>
-        <p>
+    <main class="main">
+      <div class="main__firstParagraph">
+        <h1 class="main__firstParagraph__title"></h1>
+        <p class="main__firstParagraph__paragraph">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci,
           accusantium.
         </p>
-        <a href="#">Get started for Free </a>
+        <a class="main__firstParagraph__bouton" href="#"
+          >Get started for Free
+        </a>
       </div>
-      <img src="./medias/img/illustration_your_users.svg" alt="" />
+      <img
+        class="main__illustration"
+        src="./medias/img/illustration_mockups.svg"
+        alt=""
+      />
     </main>
-    <section>
-      <div>
-        <h2></h2>
-        <p>Lorem ipsum dolor sit amet consectetur.</p>
-        <img src="./medias/img/illustration_grow_together.svg" alt="" />
+    <section class="section">
+      <div class="section__first--block">
+        <h2 class="section__first--block__title"></h2>
+        <p class="section__first--block__paragraph">
+          Lorem ipsum dolor sit amet consectetur.
+        </p>
+        <img
+          class="section__first--block__illustration"
+          src="./medias/img/illustration_grow_together.svg"
+          alt=""
+        />
       </div>
 
-      <div>
-        <h2></h2>
-        <p>Lorem ipsum dolor sit amet consectetur.</p>
-        <img src="./medias/img/illustration_flowing_conversation.svg" alt="" />
+      <div class="section__second--block">
+        <h2 class="section__second--block__title"></h2>
+        <p class="section__second--block__paragraph">
+          Lorem ipsum dolor sit amet consectetur.
+        </p>
+        <img
+          class="section__second--block__illustration"
+          src="./medias/img/illustration_flowing_conversation.svg"
+          alt=""
+        />
       </div>
 
-      <div>
-        <h2></h2>
-        <p>Lorem ipsum dolor sit amet consectetur.</p>
-        <img src="./medias/img/illustration_mockups.svg" alt="" />
+      <div class="section__third--block">
+        <h2 class="section__third--block__title"></h2>
+        <p class="section__third--block__paragraph">
+          Lorem ipsum dolor sit amet consectetur.
+        </p>
+        <img
+          class="section__third--block__illustration"
+          src="./medias/img/illustration_your_users.svg"
+          alt=""
+        />
       </div>
     </section>
-    <div>
-      <h2></h2>
-      <a href="#">Get started For Free</a>
-    </div>
-    <footer>
-      <img src="./medias/img/logo.svg" alt="logo" />
-
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+    <aside class="aside">
+      <h2 class="aside__title">Ready To Build Your Community?</h2>
+      <a class="aside__button" href="#">Get started For Free</a>
+    </aside>
+    <footer class="footer">
+      <img class="footer__logo" src="./medias/img/logo.svg" alt="logo" />
+      <ul class="footer__contacts">
+        <li class="footer__contacts__adress">
+          <a href="#">Lorem, ipsum dolor.</a>
+        </li>
+        <li class="footer__contacts__telephone">
+          <a href="#">Lorem, ipsum dolor.</a>
+        </li>
+        <li class="footer__contacts__mail">
+          <a href="#">Lorem, ipsum dolor.</a>
+        </li>
       </ul>
 
-      <div>
-        <img src="" alt="" /><img src="" alt="" /><img src="" alt="" />
-        <a href="#">copyright</a>
+      <ul class="footer__nav">
+        <li class="footer__nav__about-us"><a href="#">About Us</a></li>
+        <li class="footer__nav__what-we-do"><a href="#">What We Do</a></li>
+        <li class="footer__nav__faq"><a href="#">FAQ</a></li>
+        <li class="footer__nav__career"><a href="#">Career</a></li>
+        <li class="footer__nav__blog"><a href="#">Blog</a></li>
+        <li class="footer__nav__contact-us"><a href="#">Contact Us</a></li>
+      </ul>
+
+      <div class="footer__social">
+        <a href="#"><img class="footer__social__facebook" src="" alt="" /></a>
+        <a href="#"><img class="footer__social__twitter" src="" alt="" /></a>
+        <a href="#"><img class="footer__social__instagram" src="" alt="" /></a>
+        <p>© Copyright 2018 Hundle. All rights reserved.</p>
       </div>
     </footer>
   </body>
