start css and adding html content

--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
   <body>
     <header class="header">
       <img class="header__logo" src="./medias/img/logo.svg" alt="logo" />
-      <a class="header__bouton" href="#">Try it Free</a>
+      <a class="header__button" href="#">Try it Free</a>
     </header>
     <main class="main">
       <div class="main__firstParagraph">
-        <h1 class="main__firstParagraph__title"></h1>
+        <h1 class="main__firstParagraph__title">
+          Build The Community Your Fans Will Love
+        </h1>
         <p class="main__firstParagraph__paragraph">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci,
-          accusantium.
+          Huddle re-imagines the way we build communities. Your have a voice,
+          but so does your audience. Create connections with your users as you
+          engage in genuine discussion.
         </p>
         <a class="main__firstParagraph__bouton" href="#"
           >Get started for Free
@@ -30,9 +33,11 @@
     </main>
     <section class="section">
       <div class="section__first--block">
-        <h2 class="section__first--block__title"></h2>
+        <h2 class="section__first--block__title">Grow Together</h2>
         <p class="section__first--block__paragraph">
-          Lorem ipsum dolor sit amet consectetur.
+          Generate meaningful disucssions with your audience and build a strong
+          community. Think of the insightful conversations you miss out on with
+          a feedback from.
         </p>
         <img
           class="section__first--block__illustration"
@@ -42,9 +47,10 @@
       </div>
 
       <div class="section__second--block">
-        <h2 class="section__second--block__title"></h2>
+        <h2 class="section__second--block__title">Flowing Conversations</h2>
         <p class="section__second--block__paragraph">
-          Lorem ipsum dolor sit amet consectetur.
+          You wouldn't paginate a conversation in real life, so why do it
+          online? Our threads have just-in-time loading for a more natural flow.
         </p>
         <img
           class="section__second--block__illustration"
@@ -54,9 +60,11 @@
       </div>
 
       <div class="section__third--block">
-        <h2 class="section__third--block__title"></h2>
+        <h2 class="section__third--block__title">Your Users</h2>
         <p class="section__third--block__paragraph">
-          Lorem ipsum dolor sit amet consectetur.
+          It take no time at all to integrate Huddle with your app's
+          authentification solution. This means, once signed in to your app,
+          your users can start chatting immediately.
         </p>
         <img
           class="section__third--block__illustration"
