--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
     </header>
     <main>
       <div>
-        <h1></h1>
+        <h1>Build The Community <br />Your Fans Will Love</h1>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci,
-          accusantium.
-        </p>
+          Huddle re-imagines the way we build communities .Youhave a voice ,but so does your audience .Create connections with your users as you engage in genuine discussion</p>
         <a href="#">Get started for Free </a>
       </div>
-      <img src="./medias/img/illustration_your_users.svg" alt="" />
+      <img src="./medias/img/illustration_mockups.svg" alt="" />
     </main>
     <section>
       <div>
@@ -38,7 +36,7 @@
       <div>
         <h2></h2>
         <p>Lorem ipsum dolor sit amet consectetur.</p>
-        <img src="./medias/img/illustration_mockups.svg" alt="" />
+        <img src="./medias/img/illustration_your_users.svg" alt="" />
       </div>
     </section>
     <div>
