--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <a class="aside__button" href="#">Get started For Free</a>
     </aside>
     <footer class="footer">
-      <img class="footer__logo" src="./medias/img/logo.svg" alt="logo" />
+      <img class="footer__logo" src="./medias/img/logo_white.svg" alt="logo" />
       <ul class="footer__contacts">
         <li class="footer__contacts__adress">
           <a href="#">Lorem, ipsum dolor.</a>
@@ -90,7 +90,6 @@
           <a href="#">Lorem, ipsum dolor.</a>
         </li>
       </ul>
-
       <ul class="footer__nav">
         <li class="footer__nav__about-us"><a href="#">About Us</a></li>
         <li class="footer__nav__what-we-do"><a href="#">What We Do</a></li>
@@ -99,13 +98,14 @@
         <li class="footer__nav__blog"><a href="#">Blog</a></li>
         <li class="footer__nav__contact-us"><a href="#">Contact Us</a></li>
       </ul>
-
       <div class="footer__social">
         <a href="#"><img class="footer__social__facebook" src="" alt="" /></a>
         <a href="#"><img class="footer__social__twitter" src="" alt="" /></a>
         <a href="#"><img class="footer__social__instagram" src="" alt="" /></a>
-        <p>© Copyright 2018 Hundle. All rights reserved.</p>
       </div>
+      <p class="footer__copyrights">
+        © Copyright 2018 Hundle. All rights reserved.
+      </p>
     </footer>
   </body>
 </html>
