ajout logo footer

--- a/index.html
+++ b/index.html
@@ -112,18 +112,26 @@
             </ul>
             <div class="footer__social">
                 <a href="#"
-                    ><img class="footer__social__facebook" src="" alt=""
-                /></a>
+                    ><i
+                        class="footer__social__facebook fa-brands fa-facebook-f"
+                    ></i
+                ></a>
                 <a href="#"
-                    ><img class="footer__social__twitter" src="" alt=""
-                /></a>
+                    ><i class="footer__social__twitter fa-brands fa-twitter"></i
+                ></a>
                 <a href="#"
-                    ><img class="footer__social__instagram" src="" alt=""
-                /></a>
+                    ><i
+                        class="footer__social__instagram fa-brands fa-instagram"
+                    ></i
+                ></a>
             </div>
             <p class="footer__copyrights">
                 © Copyright 2018 Hundle. All rights reserved.
             </p>
         </footer>
     </body>
+    <script
+        src="https://kit.fontawesome.com/2b1196aa6e.js"
+        crossorigin="anonymous"
+    ></script>
 </html>
