--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
             />
             <ul class="footer__contacts">
                 <li class="footer__contacts__adress">
-                    <a href="#">Lorem, ipsum dolor.</a>
+                    <a href="#">73000 Chambéry</a>
                 </li>
                 <li class="footer__contacts__telephone">
-                    <a href="#">Lorem, ipsum dolor.</a>
+                    <a href="#">01 23 45 67 89</a>
                 </li>
                 <li class="footer__contacts__mail">
-                    <a href="#">Lorem, ipsum dolor.</a>
+                    <a href="#">email@mail.com</a>
                 </li>
             </ul>
             <ul class="footer__nav">
@@ -111,18 +111,14 @@
                 </li>
             </ul>
             <div class="footer__social">
-                <a href="#"
-                    ><i
-                        class="footer__social__facebook fa-brands fa-facebook-f"
-                    ></i
+                <a href="#" class="footer__social__facebook"
+                    ><i class="fa-brands fa-facebook-f"></i
                 ></a>
-                <a href="#"
-                    ><i class="footer__social__twitter fa-brands fa-twitter"></i
+                <a href="#" class="footer__social__twitter"
+                    ><i class="fa-brands fa-twitter"></i
                 ></a>
-                <a href="#"
-                    ><i
-                        class="footer__social__instagram fa-brands fa-instagram"
-                    ></i
+                <a href="#" class="footer__social__instagram"
+                    ><i class="fa-brands fa-instagram"></i
                 ></a>
             </div>
             <p class="footer__copyrights">
