--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="./medias/styles/index.css" />
-        <link rel="stylesheet" href="medias/styles/index_quentin.css" />
+        <link rel="stylesheet" href="./medias/styles/index_quentin.css" />
+        <link rel="stylesheet" href="medias/styles/responsive.css" />
+        <link rel="stylesheet" href="medias/styles/responsive_quentin.css" />
         <title>Huddle</title>
     </head>
     <body>
