--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         />
         <link rel="stylesheet" href="./medias/styles/index.css" />
         <link rel="stylesheet" href="./medias/styles/index_quentin.css" />
-        <link rel="stylesheet" href="medias/styles/responsive.css" />
-        <link rel="stylesheet" href="medias/styles/responsive_quentin.css" />
+        <link rel="stylesheet" href="./medias/styles/responsive.css" />
+        <link rel="stylesheet" href="./medias/styles/responsive_quentin.css" />
         <title>Huddle</title>
     </head>
     <body>
