modifs css et responsive

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <main class="main">
             <div class="main__firstParagraph">
                 <h1 class="main__firstParagraph__title">
-                    Build The Community Your Fans Will Love
+                    Build The Community <br />
+                    Your Fans Will Love
                 </h1>
                 <p class="main__firstParagraph__paragraph">
                     Huddle re-imagines the way we build communities. Your have a
