--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
         src="https://kit.fontawesome.com/2b1196aa6e.js"
         crossorigin="anonymous"
     ></script>
-    <script src="medias/scripts/tradFr.js"></script>
-    <script src="medias/scripts/neige.js"></script>
+    <script src="medias/scripts/darkMode.js"></script>
+    <!-- <script src="medias/scripts/tradFr.js"></script>
+    <script src="medias/scripts/neige.js"></script> -->
 </html>
