modifs pas terminés

--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
                     >Get started for Free
                 </a>
             </div>
-            <img
-                class="main__illustration"
-                src="./medias/img/illustration_mockups.svg"
-                alt=""
-            />
+            <div class="main__div--image">
+                <img
+                    class="main__div--image__illustration"
+                    src="./medias/img/illustration_mockups.svg"
+                    alt=""
+                />
+            </div>
         </main>
         <section class="section">
             <div class="section__first--block">
