--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
             </p>
         </footer>
     </body>
+    <script src="medias/scripts/darkMode.js"></script>
     <script
         src="https://kit.fontawesome.com/2b1196aa6e.js"
         crossorigin="anonymous"
